# wanderer-tales

./: .bashrc  .gitignore  Cargo.toml  Dexterous.toml  dev.bat
.github/workflows/: rust.yml
assets/animations/: soldier_idle_1.blend  soldier_idle_1.blend1  soldier_idle_1.glb  soldier_idle_2.blend  soldier_idle_2.glb  soldier_idle_3.blend  soldier_idle_3.glb  soldier_idle_4.blend  soldier_idle_4.glb  soldier_jump.blend  soldier_jump.blend1  soldier_jump_1.glb  soldier_run_1.glb  soldier_run_back_1.glb  soldier_walk_1.glb  soldier_walk_back_1.glb
assets/shaders/: compute_noise.wgsl  compute_refine_tiles.wgsl  compute_terrain.wgsl  extended_material.wgsl  fragment_debug_normals.wgsl  fragment_world_aligned.wgsl  height_map.wgsl  map.wgsl  utils_common.wgsl  utils_deform.wgsl  utils_noise.wgsl  vertex_terrain.wgsl  world_aligned.wgsl
benches/: hex_spiral.rs  map_gen.rs  minimal_string_rotation.rs  terrain_sample.rs
examples/: gpu_readback.rs  primitives.rs
src/: dev_tools.rs  extenstions.rs  global_state.rs  lib.rs  main.rs  util_systems.rs  wgsl_keys.rs
src/debug/: fps_counter.rs  local_position_gizmo.rs  mod.rs  switch_renderer.rs
src/dev_tools/: data.rs  debug_flags.rs  debug_normals.rs  editor_ui.rs  gizmos.rs  logs.rs  mod.rs  wireframe.rs
src/features/: mod.rs
src/features/camera/: mod.rs
src/features/map/: events.rs  mod.rs  plugin.rs
src/features/theme/: constants.rs  utils.rs
src/game/: camera.rs  lights.rs  mod.rs  movement.rs  player.rs
src/game/character_controller/: devtools.rs  mod.rs  physics.rs
src/game/map/: devtools.rs  map_devtools.rs  mod.rs
src/game/physics/: devtools.rs  mod.rs
src/game/player_controller/: actions.rs  mod.rs  player.rs
src/game/shaders/: mod.rs  (+3 more)
src/gameplay/: components.rs  mod.rs  plugin.rs
src/render/: map.rs  mod.rs  plugin.rs
src/screen/: credits.rs  loading.rs  mod.rs  playing.rs  splash.rs  title.rs
src/shaders/: plugin.rs
src/utils/: custom_materials.rs  despawn_with_parent.rs  directions.rs  ecs.rs  floating_modulo.rs  hide_entity.rs  lerpable_vec3.rs  mod.rs  noise.rs  positive_modulo.rs  primitives.rs  range.rs  remove_component.rs  spawn_default_with_parent.rs  to_3d_space.rs  tree_node.rs
tools/: get_rotations.ipynb
(+111 files in other folders)
