[package]
name = "wanderer-tales"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

# Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

[profile.release]
panic = 'abort'

[dependencies]
auto-impl-ops = "0.2.1"
bevy_easings = "0.13.1"
bevy_editor_pls = "0.8.0"
bevy_flycam = "0.13.0"
bevy_shader_utils = "0.7.0"
bracket-noise = "0.8.7"
float-cmp = "0.9.0"
interpolation = "0.3.0"
itertools = "0.12.1"
noise = "0.8.2"
noisy_bevy = "0.6.0"
rand = "0.8.5"

[dependencies.bevy]
version = "0.13.0"
default-features = false
features = [
	"animation",
	"bevy_asset",
	"bevy_audio",
	"bevy_scene",
	"bevy_winit",
	"bevy_core_pipeline",
	"bevy_render",
	"bevy_sprite",
	"bevy_text",
	"bevy_ui",
	"multi-threaded",
	"png",
	"jpeg",
	"hdr",
	"vorbis",
	"x11",
	"bevy_gizmos",
	"android_shared_stdcxx",
	"tonemapping_luts",
	"default_font",
	"webgl2",
	"file_watcher",
	"embedded_watcher",
]

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
