[package]
name = "wanderer-tales"
version = "0.1.0"
edition = "2021"

# Enable max optimizations for dependencies, but not for our code:
# [profile.dev.package."*"]
# opt-level = 3

# Enable only a small amount of optimization in debug mode
# [profile.dev]
# opt-level = 1

[profile.release]
panic = 'abort'

[dependencies]
auto-impl-ops = "0.2.1"
bevy_easings = "0.14"
bevy_flycam = "0.14"
bevy_shader_utils = "0.7.0"
bracket-noise = "0.8.7"
crossbeam-channel = "0.5.13"
float-cmp = "0.9.0"
interpolation = "0.3.0"
itertools = "0.13"
rand = "0.8.5"

[dependencies.derive_more]
version = "0.99.17"
default-features = false
features = ["add", "add_assign", "display", "from"]

[dependencies.bevy]
version = "0.14.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
